Allow autorewind setting for real tape too
Allow to disable Spectrum colours on real video mode too
Allow to press hotkeys at On Screen Keyboard
Remember last path used on output tape
Allow to load 48kB MSX cartridges
Allow to load MSX cartridges with memory mapper Ascii 8kb, Ascii 16kb, Konami without SCC, Konami with SCC, R-Type
Easier compilation on Haiku OS

Improved ZRCP:
- Added menu function to sync local snapshot to remote using ZRCP
- Added ZRCP commands: open-menu, print-error, get-text-overlay, cpu-history get extended
- Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
- Support MMU restore state on ZRCP command "cpu-history restore" for Spectrum 128k/+2/+2a/+3

Improved QL emulation:
- Allow autoload when inserting QL mdv/flp
- Show 2 microdrive and 1 floppy icon on QL, instead of just one icon
- Allow to enable/disable every drive

Improved file selector:
- scrolling the current directory field if it does not fit on the window
- can change extension filter
- when saving files, cursor is located at the file field, and a file name is suggested
- file selection zone has a different color
- go up one directory when pressing left cursor key

Improved ZX Vision:
- Changed left click mouse behaviour: when pressing left mouse button out of a window, it will close all menus.
  If you need to keep menu open and set focus on emulated machine, just left click and also press shift key.
- Improve window title background when not all buttons are visible
- Improve clicking and drawing an always visible window
- Menus can no longer be minimized (that had no sense)
- Process switcher: unminimize windows when selecting them and they were minimized
- Process switcher: now it can be set to be always visible
- Process switcher: icon names are more descriptive
- Menu titles are translated to selected language (not everything yet, please be patient)
- Improve perspective for 3D Particles widget on View Sensors

Improved ZX Desktop: