@@ -40,6 +40,7 @@ Recordar ultima ruta utilizada en cinta de salida
 Permitir cargar cartuchos de MSX de 48kB
 Permitir cargar cartuchos de MSX con memory mapper Ascii 8kb, Ascii 16kb, Konami without SCC. Konami with SCC, R-Type
 Compilación mas fácil en Haiku OS
+Mejorado editor Hexadecimal en ZX80 y ZX81: mostrar caracteres inversos
 
 Mejorado ZRCP:
 - Se agregó una función de menú para sincronizar la instantánea local con la remota usando ZRCP
