@@ -874,6 +874,9 @@ O quiza que salte al menu con la linea de opcion seleccionada donde corresponde
 
 -Incorporar bittransfe como manera de generar snapshot en .tap. Agregar parámetro de estado interrupciones, registro i. Otros registros que falten? R? Problema que está guardando algunos registros en parte alta de la memoria y puede interferir con el stack si no se ha cambiado el CLEAR
 
+-carga cinta real en zx81 y otros. Probada zx81 orquesta test
+
+-zeng online agregar a mas maquinas
 
 -comentar desensamblado copion9
 
